force-app/main/default/objects/Linked_Account__c/Linked_Account__c.object-meta.xml
<CustomObject>
    <description>A PayPal account can be indirectly linked to other PayPal accounts by tEmail, Phone, Wallet and so on. This custom object is used to store accounts linked with each other via such category. The initial idea is to create account records for all linked accounts, but creating all those records is absolutely unnecessary unless the teammate wants to switch to one of those accounts. Even in that case, teammates will be switching to only one of those accounts and not to all. We will preserve the minimal details in this object and will create actual account is necessary.</description>
    <label>Linked Account</label>
    <nameField>
        <label>Linked Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Linked Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>