force-app/main/default/objects/Linked_Account__c/fields/Account1__c.field-meta.xml
<CustomField>
    <fullName>Account1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account in one side of the linking</description>
    <inlineHelpText>Account in one side of the linking</inlineHelpText>
    <label>Account1</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Linked Accounts (Account1)</relationshipLabel>
    <relationshipName>Linked_Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>