force-app/main/default/objects/Linked_Account__c/fields/Account2__c.field-meta.xml
<CustomField>
    <fullName>Account2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Linked Accounts (Account2)</relationshipLabel>
    <relationshipName>Linked_Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>