force-app/main/default/objects/Linked_Account__c/fields/Account_Created_Time__c.field-meta.xml
<CustomField>
    <fullName>Account_Created_Time__c</fullName>
    <description>Account Created Time</description>
    <inlineHelpText>Account Created Time</inlineHelpText>
    <label>Account Created Time</label>
    <type>DateTime</type>
</CustomField>