force-app/main/default/objects/Linked_Account__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <description>Account Number</description>
    <inlineHelpText>Account Number</inlineHelpText>
    <label>Account Number</label>
    <length>64</length>
    <type>Text</type>
</CustomField>