force-app/main/default/objects/Linked_Account__c/fields/Account_Number_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_Encrypted__c</fullName>
    <description>Encrypted Account Number</description>
    <inlineHelpText>Encrypted Account Number</inlineHelpText>
    <label>Account Number Encrypted</label>
    <length>64</length>
    <type>Text</type>
</CustomField>