force-app/main/default/objects/Linked_Account__c/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <description>Account Status</description>
    <inlineHelpText>Account Status</inlineHelpText>
    <label>Account Status</label>
    <length>128</length>
    <type>Text</type>
</CustomField>