force-app/main/default/objects/Linked_Account__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>Account Type</description>
    <inlineHelpText>Account Type</inlineHelpText>
    <label>Account Type</label>
    <length>128</length>
    <type>Text</type>
</CustomField>