force-app/main/default/objects/Linked_Account__c/fields/Has_Strong_Link__c.field-meta.xml
<CustomField>
    <fullName>Has_Strong_Link__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether account1 and account2 are strongly linked so that there is no need for validation while switching to that account.</description>
    <inlineHelpText>Indicates whether account1 and account2 are strongly linked so that there is no need for validation while switching to that account.</inlineHelpText>
    <label>Has Strong Link</label>
    <type>Checkbox</type>
</CustomField>