force-app/main/default/objects/Linked_Account__c/fields/Is_Unregistered__c.field-meta.xml
<CustomField>
    <fullName>Is_Unregistered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Unregistered</description>
    <inlineHelpText>Is Unregistered</inlineHelpText>
    <label>Is Unregistered</label>
    <type>Checkbox</type>
</CustomField>