force-app/main/default/objects/Linked_Account__c/fields/Unregistered_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Unregistered_Account_Type__c</fullName>
    <description>Unregistered Account Type</description>
    <inlineHelpText>Unregistered Account Type</inlineHelpText>
    <label>Unregistered Account Type</label>
    <length>128</length>
    <type>Text</type>
</CustomField>